test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/GET__api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 28 Apr 2025 15:01:57 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="06dUWnsM9hTRDzLVMpYMcePF+SZQaWNV", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}